# Observer

./: .gitignore  CMakeLists.txt  main.cpp  start_build.sh  отчет.doc
include/: custom_file.h  file_observer.h  observer_iface.h  subject.h
src/: custom_file.cpp  file_observer.cpp  main.cpp  subject.cpp
